--- a/assets/styles/theme-sara_hilden.scss
+++ b/assets/styles/theme-sara_hilden.scss
@@ -59,6 +59,7 @@ $fly-out-nav-primary-dropdown-active-background: $light;
 $fly-out-nav-secondary-border-color: $light;
 $fly-out-nav-secondary-link: $link;
 $fly-out-nav-secondary-link-hover: $link-hover;
+$fly-out-nav-search-button-icon: currentColor;
 
 @import "../../../tms-theme-base/assets/styles/main";
 @import "main";
