--- a/assets/styles/ui-components/header/_fly-out-nav.scss
+++ b/assets/styles/ui-components/header/_fly-out-nav.scss
@@ -1,10 +1,14 @@
 .fly-out-nav {
+    .icon--close {
+        fill: $black !important;
+    }
+
     &__inner {
         box-shadow: 0 .0588rem .5rem rgba($black, .1);
     }
 
     .dropdown-toggler:focus {
-        outline-color: $black;
+        outline: 2px dotted $black;
     }
 
     .navbar-item {
@@ -39,5 +43,9 @@
             border: 1px solid $black !important;
             background-color: $white !important;
         }
+    }
+
+    .search-form-wrapper .h4 {
+        color: $black !important;
     }
 }
